--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
 .App {
   text-align: center;
 }
@@ -35,4 +37,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+.app-wrapper {
+  /* font-family: "Roboto"; */
 }
