--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,38 @@
-a.menu_item {
-  color: "#fff";
-  text-decoration: none;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #1976d2;
+  font-size: 1.2em;
+  -webkit-box-shadow: 4px -5px 23px -4px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 4px -5px 23px -4px rgba(0, 0, 0, 0.75);
+  box-shadow: 4px -5px 23px -4px rgba(0, 0, 0, 0.75);
 }
-.active_item {
+.navbar__left {
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+
+.navbar__right {
+  color: #fff;
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 0.9em;
+  font-weight: bold;
+}
+.navbar__right div:last-child {
+  margin-left: 10px;
+}
+
+.navbar .menu_item {
+  color: #fff;
+  text-decoration: none;
+  margin-right: 20px;
+}
+
+.navbar .active_menu_item {
   font-weight: bold;
 }
